--- a/.github/workflows/ci-linux.yml
+++ b/.github/workflows/ci-linux.yml
@@ -18,6 +18,7 @@ jobs:
     strategy:
       matrix:
         build_type: [Release]
+        install_path: [installed]
         c_compiler: [gcc]
         cpp_compiler: [g++]
 
@@ -59,6 +60,7 @@ jobs:
           -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
           -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
           -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
+          -DCMAKE_INSTALL_PREFIX=${{ matrix.install_path }}
           -S ${{ github.workspace }}
 
       - name:  Build Project
