--- a/.github/workflows/ci-macos.yml
+++ b/.github/workflows/ci-macos.yml
@@ -19,6 +19,7 @@ jobs:
     strategy:
       matrix:
         build_type: [Release]
+        install_path: [installed]
         c_compiler: [clang]
         cpp_compiler: [clang++]
         qt: [5.15.2]
@@ -54,6 +55,7 @@ jobs:
           -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
           -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
           -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
+          -DCMAKE_INSTALL_PREFIX=${{ matrix.install_path }}
           -S ${{ github.workspace }}
 
       - name:  Build Project
