--- a/.github/workflows/ci-win.yml
+++ b/.github/workflows/ci-win.yml
@@ -19,6 +19,7 @@ jobs:
     strategy:
       matrix:
         build_type: [Release]
+        install_path: [installed]
         c_compiler: [cl]
         cpp_compiler: [cl]
         arch: [win64_msvc2019_64]
@@ -55,6 +56,7 @@ jobs:
           -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
           -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
           -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
+          -DCMAKE_INSTALL_PREFIX=${{ matrix.install_path }}
           -S ${{ github.workspace }}
 
       - name:  Build Project
