--- a/.github/workflows/ci-clang-format-check.yml
+++ b/.github/workflows/ci-clang-format-check.yml
@@ -4,10 +4,6 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
 
-  push:
-    branches:
-      - '**'
-
   # Allows you to run this workflow manually from the Actions tab.
   workflow_dispatch:
 
@@ -38,6 +34,6 @@ jobs:
       run: |
         extensions=("h" "hpp" "c" "cpp")
         for ext in "${extensions[@]}"; do
-          find src/client -type f -name "*.$ext" | xargs clang-format -i -style=file -fallback-style=none
+          find sVanilla/src -type f -name "*.$ext" | xargs clang-format -i -style=file -fallback-style=none
           git diff --exit-code
         done
