--- a/.github/workflows/ci-clang-tidy.yml
+++ b/.github/workflows/ci-clang-tidy.yml
@@ -4,6 +4,9 @@ on:
   pull_request:
     types: [opened, synchronize, reopened]
 
+  # Allows you to run this workflow manually from the Actions tab.
+  workflow_dispatch:
+
 jobs:
   clang-tidy-check:
     runs-on: ubuntu-22.04
@@ -64,4 +67,4 @@ jobs:
 
       - name: Build with clang-tidy
         run: |
-          cmake --build ${{ github.workspace }}/build  --config Debug --parallel --target all -- --keep-going
+          cmake --build ${{ github.workspace }}/build  --config ${{ matrix.build_type }} --parallel --target all -- --keep-going
