--- a/.github/workflows/ci-macos.yml
+++ b/.github/workflows/ci-macos.yml
@@ -59,7 +59,7 @@ jobs:
           -S ${{ github.workspace }}
 
       - name:  Build Project
-        run: cmake --build ${{ github.workspace }}/build --config ${{ matrix.build_type }} --target all --
+        run: cmake --build ${{ github.workspace }}/build --config ${{ matrix.build_type }} --parallel --target all --
         
       - name:  Install Project
         run: cmake --build ${{ github.workspace }}/build --config ${{ matrix.build_type }} --target install --
