--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -72,7 +72,7 @@ jobs:
           -S ${{ github.workspace }}
 
       - name:  Build Project
-        run: cmake --build ${{ github.workspace }}/build --config ${{ matrix.build_type }} --target all_build --
+        run: cmake --build ${{ github.workspace }}/build --config ${{ matrix.build_type }} --parallel --target all_build --
         
       - name:  Install Project
         run: cmake --build ${{ github.workspace }}/build --config ${{ matrix.build_type }} --target install --
