--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -88,6 +88,7 @@ jobs:
         run: |
           pip install -r scripts/requirements.txt
           python.exe scripts/generator_wxs.py -i ${{ matrix.install_path }}/bin/
+          python.exe scripts/generator_install_manifest.py -d ${{ matrix.install_path }}/bin/ -o ${{ matrix.install_path }}/bin/manifest.json
           candle.exe -nologo -out installer/ build/${{ env.product_name}}.wxs scripts/ui.wxs
           light.exe -nologo -out ${{ matrix.asset_path }}/win_${{ env.product_name}}.msi installer/${{ env.product_name}}.wixobj installer/ui.wixobj  -ext WixUIExtension
       
