feat: package linux

--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -129,3 +129,130 @@ jobs:
           }
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  build-linux:
+    name: build-linux
+    runs-on: ubuntu-22.04
+    timeout-minutes: 120
+
+    strategy:
+      matrix:
+        build_type: [Release]
+        install_path: [package/installed]
+        asset_path: [package/asset]
+        c_compiler: [gcc]
+        cpp_compiler: [g++]
+        qt: [6.7.1]
+
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: true
+
+      - uses: lukka/get-cmake@latest
+
+      - name: Install linuxdeploy
+        uses: miurahr/install-linuxdeploy-action@v1
+        with:
+          plugins: qt appimage
+
+      - name: Install Dependencies
+        run: |
+          sudo DEBIAN_FRONTEND=noninteractive apt-get update
+          sudo DEBIAN_FRONTEND=noninteractive apt-get install -y libfcitx5-qt-dev tree
+
+      - name: Setup vcpkg
+        uses: lukka/run-vcpkg@v11
+        id: runvcpkg
+        with:
+          vcpkgDirectory: '${{ github.workspace }}/ThirdParty/vcpkg'
+          vcpkgJsonGlob: '${{ github.workspace }}/vcpkg-configuration.json'
+
+      - name: Install Qt
+        uses: jurplel/install-qt-action@v3
+        with:
+          version: ${{matrix.qt}}
+          target: desktop
+          modules: 'qtwebengine qtwebchannel qtpositioning qtpdf qtimageformats qt5compat'
+          cache: 'true'
+
+      - name: Configure CMake
+        run: >
+          cmake -B ${{ github.workspace }}/build
+          -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
+          -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
+          -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
+          -DCMAKE_INSTALL_PREFIX=${{ matrix.install_path }}
+          -S ${{ github.workspace }}
+
+      - name:  Build Project
+        run: cmake --build ${{ github.workspace }}/build --config ${{ matrix.build_type }} --parallel --target all --
+        
+      - name:  Install Project
+        run: cmake --build ${{ github.workspace }}/build --config ${{ matrix.build_type }} --target install --
+
+      - name: Get current date
+        id: date
+        run: |
+          branchName="${GITHUB_REF#refs/heads/}"
+          if [[ "$branchName" =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+            echo "ref_id=$branchName" >> $GITHUB_ENV
+          else
+            echo "ref_id=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
+          fi
+
+      - name: tar  Package
+        run: |
+          mkdir -p ${{ matrix.asset_path }}
+          tar -czvf ${{ matrix.asset_path }}/${{ env.product_name}}_${{ env.ref_id}}_x86_64.tar.gz  ${{ matrix.install_path }}/bin/*
+          
+      - name: 'Install dependencies'
+        run: |
+          sudo apt-get update
+          sudo apt install desktop-file-utils libfuse2
+
+      - name: 'Install linuxdeploy'
+        run: |
+          pwd
+          wget https://github.com/linuxdeploy/linuxdeploy/releases/download/continuous/linuxdeploy-x86_64.AppImage
+          wget https://github.com/linuxdeploy/linuxdeploy-plugin-qt/releases/download/continuous/linuxdeploy-plugin-qt-x86_64.AppImage
+          wget https://github.com/linuxdeploy/linuxdeploy-plugin-appimage/releases/download/continuous/linuxdeploy-plugin-appimage-x86_64.AppImage
+          chmod +x linuxdeploy-x86_64.AppImage
+          chmod +x linuxdeploy-plugin-qt-x86_64.AppImage
+          chmod +x linuxdeploy-plugin-appimage-x86_64.AppImage
+
+      - name: 'Create AppImage'
+        run: |
+          sed -i 's|^Exec=.*|Exec=sVanilla|' ${{ matrix.install_path }}/bin/share/applications/sVanilla.desktop
+          export LD_LIBRARY_PATH=${{ github.workspace }}/build/vcpkg_installed/x64-linux/lib:$LD_LIBRARY_PATH
+          ./linuxdeploy-x86_64.AppImage --appdir build -e ${{ matrix.install_path }}/bin/${{ env.product_name}} -i ${{ matrix.install_path }}/bin/share/icon/sVanilla.svg -d ${{ matrix.install_path }}/bin/share/applications/sVanilla.desktop --output appimage
+          rm linuxdeploy-x86_64.AppImage
+          rm linuxdeploy-plugin-qt-x86_64.AppImage
+          rm linuxdeploy-plugin-appimage-x86_64.AppImage
+          mv *.AppImage ${{ matrix.asset_path }}/${{ env.product_name }}_${{ env.ref_id }}-x86_64.AppImage ||:
+          
+      - name: Calculate SHA256 checksums for each file
+        run: |
+          cd  "${{ matrix.asset_path }}" || exit
+          for file in *; do
+              [ -f "$file" ] && sha256sum "$file" > "$file.sha256"
+          done
+
+      - name: Update GitHub Release
+        uses: actions/upload-artifact@v4
+        with:
+          name: test
+          path: |
+            ${{ matrix.asset_path }}/*.AppImage
+            ${{ matrix.asset_path }}/*.sha256
+            ${{ matrix.asset_path }}/*.tar.gz
+
+      - name: Upload Release Assets
+        run: |
+          files=$(find ${{ matrix.asset_path }} -type f);
+          for file in $files; do
+            echo "Uploading $file"
+            gh release upload "${{ github.ref_name }}" "$file" --clobber
+          done
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
