--- a/sVanilla/src/ClientUi/CMakeLists.txt
+++ b/sVanilla/src/ClientUi/CMakeLists.txt
@@ -146,17 +146,25 @@ install(FILES "$<TARGET_FILE_DIR:${PROJECT_NAME}>/authors.csv" DESTINATION ${CMA
 
 include(InstallRequiredSystemLibraries)
 
-file(GLOB VCPAKG_DEP_DIRS LIST_DIRECTORIES true "${CMAKE_CURRENT_SOURCE_DIR}/ThirdParty/vcpkg/packages/*")
+file(GLOB VCPAKG_DEP_DIRS LIST_DIRECTORIES true "${CMAKE_SOURCE_DIR}/ThirdParty/vcpkg/packages/*")
 if (VCPAKG_DEP_DIRS)
     foreach (VCPAKG_DEP_DIR ${VCPAKG_DEP_DIRS})
+        if (WIN32)
+            set(LIB_PRX_PATH bin)
+        elseif (APPLE)
+            set(LIB_PRX_PATH lib)
+        elseif (UNIX AND NOT APPLE)
+            set(LIB_PRX_PATH lib)
+        endif ()
+
         if (${CMAKE_BUILD_TYPE} STREQUAL "Debug" OR ${CMAKE_BUILD_TYPE} STREQUAL "debug" OR ${CMAKE_BUILD_TYPE} STREQUAL "DEBUG")
-            set(VCPKG_LIB ${VCPAKG_DEP_DIR}/debug/bin/)
+            set(VCPKG_LIB ${VCPAKG_DEP_DIR}/debug/${LIB_PRX_PATH}/)
         else ()
-            set(VCPKG_LIB ${VCPAKG_DEP_DIR}/bin/)
+            set(VCPKG_LIB ${VCPAKG_DEP_DIR}/${LIB_PRX_PATH}/)
         endif ()
 
         string(FIND "${VCPAKG_DEP_DIR}" "gtest" POS)
-        if (EXISTS ${VCPKG_LIB} AND ${POS} EQUAL 0)
+        if (EXISTS "${VCPKG_LIB}" AND "${POS}" EQUAL -1)
             add_custom_command(TARGET ${PROJECT_NAME}
                 POST_BUILD
                     COMMAND ${CMAKE_COMMAND} -E copy_directory ${VCPKG_LIB} $<TARGET_FILE_DIR:${PROJECT_NAME}>
