--- a/cmake/sVanilla.desktop.in
+++ b/cmake/sVanilla.desktop.in
@@ -1,5 +1,5 @@
 [Desktop Entry]
-Version=${PROJECT_VERSION}
+Version=${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
 Type=Application
 Name=${PROJECT_NAME}
 Comment=${CMAKE_PROJECT_DESCRIPTION}
