fix: ensureVisible for showInfo

--- a/.github/workflows/ci-macos.yml
+++ b/.github/workflows/ci-macos.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   build:
-    name: ${{ matrix.config.name }}
+    name: Build On Macos
     runs-on: macos-13
     timeout-minutes: 120
 
