--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -21,7 +21,7 @@ env:
 
 jobs:
   build-windows:
-    name: ${{ matrix.config.name }}
+    name: build-windows
     runs-on: windows-2019
     timeout-minutes: 120
 
@@ -114,7 +114,7 @@ jobs:
       - name: Update GitHub Release
         uses: actions/upload-artifact@v4
         with:
-          name: test
+          name: windows
           path: |
             ${{ matrix.asset_path }}/*.zip
             ${{ matrix.asset_path }}/*.sha256
@@ -241,7 +241,7 @@ jobs:
       - name: Update GitHub Release
         uses: actions/upload-artifact@v4
         with:
-          name: test
+          name: linux
           path: |
             ${{ matrix.asset_path }}/*.AppImage
             ${{ matrix.asset_path }}/*.sha256
@@ -256,3 +256,108 @@ jobs:
           done
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  build-macos:
+      name: build-macos
+      runs-on: macos-13
+      timeout-minutes: 120
+
+      strategy:
+        matrix:
+          build_type: [Release]
+          install_path: [package/installed]
+          asset_path: [package/asset]
+          c_compiler: [clang]
+          cpp_compiler: [clang++]
+          qt: [6.7.1]
+          qt_modules: [qtwebengine]
+
+      steps:
+        - uses: actions/checkout@v4
+          with:
+            submodules: true
+
+        - uses: lukka/get-cmake@latest
+
+        - name: Setup vcpkg
+          uses: lukka/run-vcpkg@v11
+          id: runvcpkg
+          with:
+            vcpkgDirectory: '${{ github.workspace }}/ThirdParty/vcpkg'
+            vcpkgJsonGlob: '${{ github.workspace }}/vcpkg-configuration.json'
+
+        - name: Install Qt
+          uses: jurplel/install-qt-action@v4
+          with:
+            version: ${{ matrix.qt }}
+            host: 'mac'
+            target: desktop
+            modules:  ${{ matrix.qt_modules }}
+            cache: 'true'
+            setup-python: 'false'
+
+        - name: Configure CMake
+          run: >
+            cmake -B ${{ github.workspace }}/build
+            -DCMAKE_CXX_COMPILER=${{ matrix.cpp_compiler }}
+            -DCMAKE_C_COMPILER=${{ matrix.c_compiler }}
+            -DCMAKE_BUILD_TYPE=${{ matrix.build_type }}
+            -DCMAKE_INSTALL_PREFIX=${{ matrix.install_path }}
+            -S ${{ github.workspace }}
+
+        - name:  Build Project
+          run: |
+            export Qt6_DIR=${QT_ROOT_DIR}/lib
+            cmake --build ${{ github.workspace }}/build --config ${{ matrix.build_type }} --parallel --target all --
+          
+        - name:  Install Project
+          run: cmake --build ${{ github.workspace }}/build --config ${{ matrix.build_type }} --target install --
+
+        - name: Get current date
+          id: date
+          run: |
+            branchName="${GITHUB_REF#refs/heads/}"
+            if [[ "$branchName" =~ ^v[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+              echo "ref_id=$branchName" >> $GITHUB_ENV
+            else
+              echo "ref_id=$(date +'%Y-%m-%d')" >> $GITHUB_ENV
+            fi
+
+        - name: tar  Package
+          run: |
+            mkdir -p ${{ matrix.asset_path }}
+            tar -czvf ${{ matrix.asset_path }}/${{ env.product_name}}_${{ env.ref_id}}_x86_64.tar.gz  ${{ matrix.install_path }}/bin/*
+
+        - name: 'Create dmg'
+          run: |
+            python scripts/generator_install_manifest.py -d  ${{ matrix.install_path }}/sVanilla.app/Contents/MacOS -o  ${{ matrix.install_path }}/sVanilla.app/Contents/MacOS/manifest.json
+            macdeployqt ${{ matrix.install_path }}/sVanilla.app -dmg
+            mv ${{ matrix.install_path }}/*.dmg ${{ matrix.asset_path }}/${{ env.product_name }}_${{ env.ref_id }}-x86_64.dmg ||:
+              
+        - name: Calculate SHA256 checksums for each file
+          run: |
+            cd "${{ matrix.asset_path }}" || exit
+            for file in *; do
+                if [ -f "$file" ]; then
+                    shasum -a 256 "$file" > "$file.sha256"
+                fi
+            done
+
+        - name: Update GitHub Release
+          uses: actions/upload-artifact@v4
+          with:
+            name: macos
+            path: |
+              ${{ matrix.asset_path }}/*.dmg
+              ${{ matrix.asset_path }}/*.sha256
+              ${{ matrix.asset_path }}/*.tar.gz
+
+        - name: Upload Release Assets
+          run: |
+            files=$(find ${{ matrix.asset_path }} -type f);
+            for file in $files; do
+              echo "Uploading $file"
+              gh release upload "${{ github.ref_name }}" "$file" --clobber
+            done
+          env:
+            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
