--- a/.github/workflows/ci-win.yml
+++ b/.github/workflows/ci-win.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   build:
-    name: ${{ matrix.config.name }}
+    name: Build On Windows
     runs-on: windows-2019
     timeout-minutes: 120
 
