--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -204,12 +204,12 @@ jobs:
       - name: tar  Package
         run: |
           mkdir -p ${{ matrix.asset_path }}
-          tar -czvf ${{ matrix.asset_path }}/${{ env.product_name}}_${{ env.ref_id}}_x86_64.tar.gz  ${{ matrix.install_path }}/bin/*
+          tar -czvf ${{ matrix.asset_path }}/${{ env.product_name}}_${{ env.ref_id}}_x86_64.tar.gz -C ${{ matrix.install_path }}/bin .
           
       - name: 'Install dependencies'
         run: |
           sudo apt-get update
-          sudo apt install desktop-file-utils libfuse2
+          sudo apt install desktop-file-utils libfuse2 libxcb-icccm4 libxcb-image0 libxcb-keysyms1 libxcb-render-util0 libxcb-xinerama0 libxcb-composite0 libxcb-cursor0 libxcb-damage0 libxcb-dpms0 libxcb-dri2-0 libxcb-dri3-0 libxcb-ewmh2 libxcb-glx0 libxcb-present0 libxcb-randr0 libxcb-record0 libxcb-render0 libxcb-res0 libxcb-screensaver0 libxcb-shape0 libxcb-shm0 libxcb-sync1 libxcb-util1 libxkbcommon-x11-0
 
       - name: 'Install linuxdeploy'
         run: |
@@ -225,7 +225,7 @@ jobs:
         run: |
           sed -i 's|^Exec=.*|Exec=sVanilla|' ${{ matrix.install_path }}/bin/share/applications/sVanilla.desktop
           export LD_LIBRARY_PATH=${{ github.workspace }}/build/vcpkg_installed/x64-linux/lib:$LD_LIBRARY_PATH
-          ./linuxdeploy-x86_64.AppImage --appdir build -e ${{ matrix.install_path }}/bin/${{ env.product_name}} -i ${{ matrix.install_path }}/bin/share/icon/sVanilla.svg -d ${{ matrix.install_path }}/bin/share/applications/sVanilla.desktop --output appimage
+          ./linuxdeploy-x86_64.AppImage --appdir ${{ matrix.install_path }}/${{ env.product_name}} -e ${{ matrix.install_path }}/bin/${{ env.product_name}} -i ${{ matrix.install_path }}/bin/share/icon/sVanilla.svg -d ${{ matrix.install_path }}/bin/share/applications/sVanilla.desktop --plugin qt --output appimage
           rm linuxdeploy-x86_64.AppImage
           rm linuxdeploy-plugin-qt-x86_64.AppImage
           rm linuxdeploy-plugin-appimage-x86_64.AppImage
@@ -326,7 +326,7 @@ jobs:
         - name: tar  Package
           run: |
             mkdir -p ${{ matrix.asset_path }}
-            tar -czvf ${{ matrix.asset_path }}/${{ env.product_name}}_${{ env.ref_id}}_x86_64.tar.gz  ${{ matrix.install_path }}/bin/*
+            tar -czvf ${{ matrix.asset_path }}/${{ env.product_name}}_${{ env.ref_id}}_x86_64.tar.gz -C ${{ matrix.install_path }}/bin .
 
         - name: 'Create dmg'
           run: |
