--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -42,6 +42,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: true
+          fetch-depth: 0
 
       - name: Get cmake 
         uses: lukka/get-cmake@latest
@@ -148,6 +149,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: true
+          fetch-depth: 0
 
       - uses: lukka/get-cmake@latest
 
@@ -276,6 +278,7 @@ jobs:
         - uses: actions/checkout@v4
           with:
             submodules: true
+            fetch-depth: 0
 
         - uses: lukka/get-cmake@latest
 
