--- a/cmake/version.h.in
+++ b/cmake/version.h.in
@@ -1,8 +1,8 @@
 #pragma once
 
 // clang-format off
-#define _STR(A) #A
-#define STR(A) _STR(A)
+#define _SVNLA_STR(A) #A
+#define SVNLA_STR(A) _SVNLA_STR(A)
 
 #define SVNLA_MAJOR ${PROJECT_VERSION_MAJOR}
 #define SVNLA_MINOR ${PROJECT_VERSION_MINOR}
@@ -12,8 +12,8 @@
 #define GIT_BRANCH "${GIT_BRANCH}"
 
 #define SVNLA_VERSION (10000 * SVNLA_MAJOR + 100 * SVNLA_MINOR + SVNLA_PATCH)
-#define SVNLA_VERSION_STR STR(SVNLA_MAJOR.SVNLA_MINOR.SVNLA_PATCH)
-#define SVNLA_VERSION_STR_WITH_GIT SVNLA_VERSION_STR STR(GIT_HASH)
+#define SVNLA_VERSION_STR SVNLA_STR(SVNLA_MAJOR.SVNLA_MINOR.SVNLA_PATCH)
+#define SVNLA_VERSION_STR_WITH_GIT SVNLA_VERSION_STR SVNLA_STR(GIT_HASH)
 
 #define SVNLA_BUILD_DATE "${BUILD_DATE}"
 #define SVNLA_BUILD_TIME "${BUILD_TIME}"
