--- a/test/BiliApi/CMakeLists.txt
+++ b/test/BiliApi/CMakeLists.txt
@@ -19,6 +19,9 @@ set(QT_COMPONENTS
 
 find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS ${QT_COMPONENTS} LinguistTools)
+find_package(spdlog REQUIRED)
+find_package(nlohmann_json CONFIG REQUIRED)
+find_package(CURL REQUIRED)
 
 # 寻找OpenSSL库
 find_package(OpenSSL REQUIRED)
@@ -31,14 +34,16 @@ endif()
 add_executable(${BiliApi_test} ${SOURCES})
 add_test(NAME ${BiliApi_test} COMMAND ${BiliApi_test})
 add_compile_definitions(TEST_PROJ_DIR=L"${CMAKE_CURRENT_SOURCE_DIR}")
-add_dependencies(${BiliApi_test} GTest::gtest_main)
 
 foreach (COMPONENTS ${QT_COMPONENTS})
     set(QT_LIBS ${QT_LIBS} Qt${QT_VERSION_MAJOR}::${COMPONENTS})
 endforeach ()
 target_link_libraries(${BiliApi_test}
     PRIVATE
-        gtest gmock gtest_main gmock_main
+        GTest::gtest 
+        GTest::gmock 
+        GTest::gtest_main 
+        GTest::gmock_main
         spdlog::spdlog
         nlohmann_json::nlohmann_json
         CURL::libcurl
