--- a/test/NetWork/CMakeLists.txt
+++ b/test/NetWork/CMakeLists.txt
@@ -5,12 +5,15 @@ set(SOURCES ${TEST_SOURCES} ${TESTED_SOURCES})
 
 set(CMAKE_AUTOMOC ON)
 
+find_package(spdlog REQUIRED)
+find_package(nlohmann_json CONFIG REQUIRED)
+find_package(CURL REQUIRED)
+
 
 
 add_executable(${NetWork_test} ${SOURCES})
 add_test(NAME ${NetWork_test} COMMAND ${NetWork_test})
 add_compile_definitions(TEST_PROJ_DIR=L"${CMAKE_CURRENT_SOURCE_DIR}")
-add_dependencies(${NetWork_test} GTest::gtest_main)
 
 target_link_libraries(${NetWork_test}
     PRIVATE
